@@ -5,6 +5,7 @@ noinst_HEADERS=\
  connlayer_p.h \
  ipc_p.h \
  msglayer_p.h \
+ servicelayer_p.h \
  transportlayer_p.h \
  transportlayersocket_p.h
 
@@ -13,6 +14,7 @@ iheader_HEADERS=\
  connlayer.h \
  ipc.h \
  msglayer.h \
+ servicelayer.h \
  transportlayer.h \
  transportlayertcp.h \
  transportlayerunix.h
@@ -21,6 +23,7 @@ libipc_la_SOURCES=\
  connlayer.c \
  ipc.c \
  msglayer.c \
+ servicelayer.c \
  transportlayer.c \
  transportlayersocket.c \
  transportlayertcp.c \
