@@ -26,18 +26,20 @@
  ***************************************************************************/
 
 
-#ifndef GWENHYFWAR_IPC_H
-#define GWENHYFWAR_IPC_H
+#ifndef GWENHYFWAR_SERVICELAYER_H
+#define GWENHYFWAR_SERVICELAYER_H
+
+
+typedef struct GWEN_GLOBAL_SERVICELAYER GWEN_GLOBAL_SERVICELAYER;
 
 
 
-#define GWEN_IPC_ERROR_TYPE "IPC"
-#define GWEN_IPC_ERROR_INQUEUE_FULL   1
-#define GWEN_IPC_ERROR_OUTQUEUE_FULL  2
-#define GWEN_IPC_ERROR_BAD_STATE      3
-#define GWEN_IPC_ERROR_NO_CONNECTIONS 4
 
-#endif /* GWENHYFWAR_IPC_H */
+
+#endif /* GWENHYFWAR_SERVICELAYER_H */
+
+
+
 
 
 
