@@ -119,4 +119,3 @@ struct GWEN_IPCTRANSPORTLAYER {
 
 
 
-#define GWENHYFWAR_TRANSPORTLAYER_H
